--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "index.js",
     "scripts": {
         "dev": "node index.js",
+        "webDriver": "node utils/webDriver/index.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [
@@ -13,6 +14,8 @@
     "author": "yma16",
     "license": "ISC",
     "dependencies": {
+        "axios": "^1.6.8",
+        "ioredis": "^5.3.2",
         "koa": "^2.15.1",
         "koa-body": "^6.0.1",
         "koa-bodyparser": "^4.4.1",
@@ -20,6 +23,8 @@
         "koa-router": "^12.0.1",
         "koa2-cors": "^2.0.6",
         "koa2-swagger-ui": "^5.10.0",
+        "nodemailer": "^6.9.13",
+        "selenium-webdriver": "^4.20.0",
         "swagger-jsdoc": "^6.2.8"
     }
 }
